[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/BaseEnemy/BaseEnemy.gd" type="Script" id=1]
[ext_resource path="res://enemies/Zombie/zombie.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "default"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, 10.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7 )

[node name="BaseEnemy" type="KinematicBody2D" groups=[
"enemies",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 4.0
anims/default = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -0.174533
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 3 )

[node name="Vision" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Vision"]
polygon = PoolVector2Array( -3.66515, -3.36874, -30.3235, 20.2568, -12.3032, 39.612, 12.5583, 39.7789, 30.078, 19.7563, 1.6742, -3.8693 )

[node name="Balloon" type="Sprite" parent="."]
position = Vector2( -0.124992, -16.5906 )

[node name="SuspiciousTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="MagicBallTimer" type="Timer" parent="."]
[connection signal="body_entered" from="Vision" to="." method="_on_Vision_body_entered"]
[connection signal="timeout" from="SuspiciousTimer" to="." method="_on_SuspiciousTimer_timeout"]
[connection signal="timeout" from="MagicBallTimer" to="." method="_on_MagicBallTimer_timeout"]
